--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 	<div class="img">
-		<img id="status-image" src="" alt="" />
+		<img id="status-image" src="https://juicepoopooumgood.github.io/Dynamic-Discord-Status/status/offline.svg" alt="" />
 	</div>
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-	<script src="./script.js"></script>
+	<script src="https://juicepoopooumgood.github.io/Dynamic-Discord-Status/script.js"></script>
 </body>
